--- a/faq.html
+++ b/faq.html
@@ -9,8 +9,8 @@
     <header>
       <h1>Amazeriffic</h1>
       <nav>
-	<a href="#">Sign Up!</a> |
-	<a href="#">FAQ</a> |
+	<a href="signup.html">Sign Up!</a> |
+	<a href="faq.html">FAQ</a> |
 	<a href="#">Support</a>
 	</nav>
     </header>
@@ -27,6 +27,7 @@
 	  <p>Use the contact us information on the home page</p></li>
 	<li>How to go back to home page?
 	  <p>Click on the <a href="index.html">Home</a></p></li>
+	</ol>
     </main>
 
     <footer>
